--- a/android/local.properties
+++ b/android/local.properties
@@ -1,2 +1,5 @@
-sdk.dir=C:\\Users\\eitaka\\AppData\\Local\\Android\\sdk
-flutter.sdk=C:\\flutter
+sdk.dir=/opt/android
+flutter.sdk=/home/user/flutter
+flutter.buildMode=release
+flutter.versionName=1.0.0
+flutter.versionCode=1
