--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,8 @@ dependencies:
   firebase_core:
   image_picker: ^0.8.4+4
   firebase_storage: ^12.1.1
+  firebase_auth: ^5.1.2
+  provider: ^6.1.2
 dev_dependencies:
   flutter_test:
     sdk: flutter
